--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,23 +1,21 @@
-# Set status bar styles
+unbind C-b
+set-option -g prefix C-Space
+bind-key C-Space send-prefix
+
 set-option -g status-style bg=default
-set-window-option -g window-status-current-style fg=colour248
-set-window-option -g window-status-style fg=colour240
+set-window-option -g window-status-current-style fg=default
+set-window-option -g window-status-style fg=colour8
 
 set -s escape-time 0
 set -g base-index 1
-set-option -g renumber-windows on
 set -s extended-keys on
+set -g allow-passthrough true
+set-option -g renumber-windows on
 
-# Doesn't work - C-<num> gets sent as odd characters instead
 bind h select-window -t:1
 bind j select-window -t:2
 bind k select-window -t:3
 bind l select-window -t:4
 
 bind c new-window -c "#{pane_current_path}"
-
-unbind C-b
-set-option -g prefix C-Space
-bind-key C-Space send-prefix
-
 bind r source-file ~/.config/tmux/tmux.conf
