--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,7 +9,7 @@ set-window-option -g window-status-style fg=colour8
 set -s escape-time 0
 set -g base-index 1
 set -s extended-keys on
-set -g allow-passthrough true
+set -g allow-passthrough on
 set-option -g renumber-windows on
 
 bind h select-window -t:1
