--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -19,3 +19,4 @@ bind l select-window -t:4
 
 bind c new-window -c "#{pane_current_path}"
 bind r source-file ~/.config/tmux/tmux.conf
+bind s display-popup -E "tmux-session"
