Add session save/restore to tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,6 +2,11 @@ unbind C-b
 set-option -g prefix C-Space
 bind-key C-Space send-prefix
 
+set -g @plugin "tmux-plugins/tmux-resurrect"
+set -g @plugin "tmux-plugins/tmux-continuum"
+set -g @continuum-restore "on"
+set -g @continuum-save-interval "1"
+
 set-option -g status-style bg=default
 set-window-option -g window-status-current-style fg=default
 set-window-option -g window-status-style fg=colour8
@@ -20,3 +25,5 @@ bind l select-window -t:4
 bind c new-window -c "#{pane_current_path}"
 bind r source-file ~/.config/tmux/tmux.conf
 bind s display-popup -E "tmux-session"
+
+run "~/.tmux/plugins/tpm/tpm"
